--- a/TodoList-boot/src/main/resources/application.properties
+++ b/TodoList-boot/src/main/resources/application.properties
@@ -12,6 +12,10 @@ spring.thymeleaf.cache=false
 #(trace < debug < info < wran < error < fatal)
 logging.level.edu.kh.todo=debug
 
+# URL에 jsessionid(접속자 구분 번호)가 보여질 때
+# 가끔 발생하는 페이지 로드 시 주소 오류 해결
+server.servelt.session.tracking-modes=cookie
+
 
 
 
