깃에 잘 올리자... 복구하느라 힘들었다...

--- a/boardProject/src/main/resources/application.properties
+++ b/boardProject/src/main/resources/application.properties
@@ -1,6 +1,5 @@
 spring.application.name=boardProject
 
-
 #서버 포트 번호 80으로 변경
 server.port=80
 
@@ -13,12 +12,6 @@ spring.thymeleaf.cache=false
 #(trace < debug < info < wran < error < fatal)
 logging.level.edu.kh.project=debug
 
-# URL에 jsessionid(접속자 구분 번호)가 보여질 때
-# 가끔 발생하는 페이지 로드 시 주소 오류 해결
-server.servelt.session.tracking-modes=cookie
 
-
-
-
-
-
+#URL에 jsessionid가 보여질 때
+server.servlet.session.tracking-modes=cookie
